--- a/Readme
+++ b/Readme
@@ -1,1 +1,2 @@
-ahhhh
+This is a set of python files that can be used for mild image processing
+Eventually they will be hopefully combined into one file, each of the current files becoming one func in a master list with an accompanying gui manager file
