--- a/Readme
+++ b/Readme
@@ -1,2 +1,3 @@
 This is a set of python files that can be used for mild image processing
-All currently working functions have been merged into the Functions file, but cannot be called througth gui yet.
+All currently working functions have been merged into the Functions file
+working on getting blurring function working
