--- a/Readme
+++ b/Readme
@@ -1,3 +1,2 @@
 This is a set of python files that can be used for mild image processing
-All currently working functions have been merged into the Functions file
-working on getting blurring function working
+All functions have been merged into the Functions file
