--- a/Readme
+++ b/Readme
@@ -1,2 +1,4 @@
+#Image Processing
+
 This is a set of python files that can be used for mild image processing
 All functions have been merged into the Functions file
